/brlist: use background color change, instead of bold, for selected branches to avoid layout changes from the text changing size, as discussed in and around [forum:/forumpost/606cbfdff6 | forum post 606cbfdff6]. Background color is the same as timelineSelected for all skins except xekri, which needs a bit more contrast.
FossilOrigin-Name: 9322a0bc2042ccfe0a288af2cc2f2572899ddf05488de4a039e155607c7605db

--- a/src/default.css
+++ b/src/default.css
@@ -1775,9 +1775,9 @@ input[type="checkbox"].diff-toggle {
   float: right;
 }
 
-body.branch .brlist > table > tbody > tr:hover > td:first-child,
+body.branch .brlist > table > tbody > tr:hover:not(.selected),
 body.branch .brlist > table > tbody > tr.selected {
-  font-weight: bold;
+  background-color: #ffc;
 }
 body.branch .brlist > table > tbody td:first-child > input {
   cursor: pointer;
